new pictures added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my first repository</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push to Github.com</h1>
@@ -12,5 +13,8 @@
     <h3>The color is now changed to orange.</h3>
     <p>This is a new paragraph.</p>
     <p>I can do coding all day.</p>
+    <img src="images/IMG_0091.JPG" alt="This is a picture of a garden">
+    <img src="images/IMG_0092.JPG" alt="Here is another picture">
+    <img src="images/IMG_0093.JPG" alt="This is the third picture">
 </body>
 </html>
