--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <img src="images/IMG_0091.JPG" alt="This is a picture of a garden">
     <img src="images/IMG_0092.JPG" alt="Here is another picture">
     <img src="images/IMG_0093.JPG" alt="This is the third picture">
+    <img src="images/IMG_0154.JPG" alt="This is a picture if Utah state">
 </body>
 </html>
